k8s/image-catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-catalog-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-catalog
  template:
    metadata:
      labels:
        app: image-catalog
    spec:
      containers:
      - image: sabinca97/dockerslikanova:latest
        name: image-catalog
        ports:
        - containerPort: 8080
          name: server
          protocol: TCP


---

apiVersion: v1
kind: Service
metadata:
  name: image-catalog
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    protocol: TCP
    targetPort: server
  selector:
    app: image-catalog


#    kubectl create -f image-catalog-deployment.yaml
#  kubectl get services
#  kubectl get deployments
