k8s/uporabniki-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uporabniki-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-catalog
  template:
    metadata:
      labels:
        app: image-catalog
    spec:
      containers:
      - image: sabinca97/uporabnik:1
        name: image-catalog
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: server
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health/live
            port: server
          initialDelaySeconds: 20
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /health/ready
            port: server
          initialDelaySeconds: 20
          periodSeconds: 3


---

apiVersion: v1
kind: Service
metadata:
  name: uporabniki-service
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: server
  selector:
    app: image-catalog
