k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: proxy-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /uporabniki-service(/|$)(.*)
        backend:
          serviceName: uporabniki-service
          servicePort: 8080
      - path: /komentar-service(/|$)(.*)
        backend:
          serviceName: komentar-service
          servicePort: 8080
      - path: /image-service(/|$)(.*)
        backend:
          serviceName: image-service
          servicePort: 8080
